--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,12 @@
 
   display: flex;
   /*flex-direction: row;*/
-  justify-content: space-between;
+  /*justify-content: space-between;
   align-content: center;
-  align-items: stretch;
+  align-items: stretch;*/
   /*flex-wrap: wrap;*/
 
-  flex-flow: row nowrap;
+  /*flex-flow: row nowrap;*/
 }
 #container div {
   width: 200px;
@@ -18,22 +18,53 @@
 }
 #container div:nth-of-type(1) {
   background-color: red;
+
+  /*flex-basis: 200px;*/
+
+  /*order: 1;*/
+
+  margin: 100px 200px;
 }
 #container div:nth-of-type(2) {
   background-color: orange;
+
+  /*flex-shrink: 5;
+  flex-grow: 1;*/
+
+  order: 2;
+  margin: auto;
 }
 #container div:nth-of-type(3) {
   background-color: yellow;
+
+  flex: 0 0 100px;
+  align-self: stretch;
+
+  order: 3;
 }
 #container div:nth-of-type(4) {
   background-color: green;
+
+  /*flex-basis: 100px;*/
+  /*flex-shrink: 10;
+  flex-grow: 1;*/
+
+  order: 4;
 }
 #container div:nth-of-type(5) {
   background-color: rgb(23, 124, 219);
+
+  order: 15;
 }
 #container div:nth-of-type(6) {
   background-color: blue;
+
+  /*flex-grow: 3;*/
+
+  order: 6;
 }
 #container div:nth-of-type(7) {
   background-color: violet;
+
+  order: 5;
 }
